--- a/src/global.scss
+++ b/src/global.scss
@@ -58,3 +58,26 @@
   color: #878fad;
   font-size: 13px;
 }
+
+
+.Rectangle-72 {
+  width: 164px;
+  height: 73px;
+  flex-grow: 0;
+  padding: 27px 18px 29px;
+  border-radius: 4px;
+  border: dashed 1px #003b6a;
+  background-color: #fff;
+}
+
+.Rectangle-73 {
+  width: 95px;
+  height: 57px;
+  flex-grow: 0;
+  margin-right: 10px;
+  padding: 20px 20px;
+  border-radius: 4px;
+  border: dashed 1px #003b6a;
+  background-color: #fff;
+}
+
