user signup and signin with dummy data for testing

--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -83,7 +83,7 @@
                   class="signup"
                   color="primary"
                   type="button"
-                  (click)="userLogin()"
+                  (click)="showOtpFragment()"
                   >Send OTP</ion-button
                 >
               </ion-list>
@@ -111,7 +111,7 @@
                 </div>
               </ion-list>
               <div class="welcome-buttons">
-                <ion-button class="signup" type="button" (click)="VerifyLogin()"
+                <ion-button class="signup" type="button" (click)="userLogin()"
                   >Submit</ion-button
                 >
               </div>
