--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,27 +3,28 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>
-      Home
-    </ion-title>
+    <ion-title> Home </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
   <ion-grid>
     <ion-row>
       <ion-col class="ion-text-center">
-        <ion-text color="primary" >
+        <ion-text color="primary">
           <h2 class="app-name my-1">House Name</h2>
         </ion-text>
         <ion-text color="success">
           <h5 class="mt-0 mb-3">My Home My Pride</h5>
         </ion-text>
-        <ion-img src="assets/images/map.png" class="image-6 ion-margin-bottom"></ion-img>
+        <ion-img
+          src="assets/images/map.png"
+          class="image-6 ion-margin-bottom"
+        ></ion-img>
 
         <ion-text class="ion-margin-top ion-text-center">
-          <span class="text-success font-weight-bold">My Home My pride</span> wishes you a very good day.Your Home is your pride.
+          <span class="text-success font-weight-bold">My Home My pride</span>
+          wishes you a very good day.Your Home is your pride.
           <span class="text-success font-weight-bold">My Home My pride</span>
           makes your pride is known to the World.
         </ion-text>
@@ -31,16 +32,29 @@
     </ion-row>
 
     <ion-row>
-      <ion-col>
-        <ion-searchbar placeholder="Search for a house name"  (click)="search()"></ion-searchbar>
-      </ion-col>
-    </ion-row>
+      <ion-searchbar
+        placeholder="Search..."
+        [(ngModel)]="filterTerm"
+        animated="true"
+      ></ion-searchbar>
 
-    <ion-row>
       <ion-col>
-        <ion-list *ngFor="let house of houseNames.slice(0,4)">
-          <ion-item>{{house}}</ion-item>
-        </ion-list>
+        <ion-item *ngFor="let data of userRecords | filter:filterTerm">
+          <ion-col size="2">
+            <ion-label>{{data.id}}</ion-label>
+          </ion-col>
+
+          <ion-col size="4">
+            <ion-thumbnail>
+              <img src="{{data.url}}">
+            </ion-thumbnail>
+          </ion-col>
+
+          <ion-col size="6">
+            <ion-label>{{data.name}}</ion-label>
+          </ion-col>
+
+        </ion-item>
       </ion-col>
     </ion-row>
   </ion-grid>
