--- a/src/global.scss
+++ b/src/global.scss
@@ -81,3 +81,10 @@
   background-color: #fff;
 }
 
+ .countryCode.sc-ion-modal-md-h{
+    --height: 50% !important;
+    align-items: self-end;
+
+}
+
+
