--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -40,20 +40,19 @@
 
       <ion-col>
         <ion-item *ngFor="let data of userRecords | filter:filterTerm">
-          <ion-col size="2">
+          <!-- <ion-col size="2">
             <ion-label>{{data.id}}</ion-label>
-          </ion-col>
+          </ion-col> -->
 
           <ion-col size="4">
             <ion-thumbnail>
-              <img src="{{data.url}}">
+              <img src="{{data.url}}" />
             </ion-thumbnail>
           </ion-col>
 
-          <ion-col size="6">
+          <ion-col size="8">
             <ion-label>{{data.name}}</ion-label>
           </ion-col>
-
         </ion-item>
       </ion-col>
     </ion-row>
