--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -36,3 +36,16 @@
   float: left;
   padding: 0;
 }
+
+.Rectangle-15 {
+  width: 378px;
+  height: 136px;
+  flex-grow: 0;
+  margin: 12px 1px 19px 5px;
+  border-radius: 50px;
+  background-color: rgba(134, 131, 131, 0.6);
+}
+
+
+
+
