--- a/src/global.scss
+++ b/src/global.scss
@@ -81,6 +81,12 @@
   background-color: #fff;
 }
 
+.house{
+  img{
+    border-radius: 50px;
+  }
+}
+
  .countryCode.sc-ion-modal-md-h{
     --height: 50% !important;
     align-items: self-end;
