--- a/src/global.scss
+++ b/src/global.scss
@@ -70,6 +70,16 @@
   background-color: #fff;
 }
 
+.Rectangle-74 {
+  width: 140px;
+  height: 73px;
+  flex-grow: 0;
+  padding: 27px 18px 29px;
+  border-radius: 4px;
+  border: dashed 1px #003b6a;
+  background-color: #fff;
+}
+
 .Rectangle-73 {
   width: 95px;
   height: 57px;
