--- a/src/app/pages/addlocation/addlocation.page.html
+++ b/src/app/pages/addlocation/addlocation.page.html
@@ -173,8 +173,10 @@
         </ion-input>
         <ion-icon name="mic-outline" slot="end" item-end></ion-icon>
       </ion-item>
-
-
     </ion-list>
+
+    <div class="container">
+      <ion-button color="primary" routerLink="/payments">Add Location</ion-button>
+    </div>
   </ion-card>
 </ion-content>
