--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -72,6 +72,7 @@
                   [(ngModel)]="phoneNo"
                   inputPlaceholder="9505444749"
                   formControlName="phoneNumber"
+                  [onlyCountries]="countries"
                   modalCssClass="countryCode"
                    >
                 </ion-intl-tel-input>
