only specific countries in dropdowns evrywhere

--- a/src/app/pages/payments/payments.page.html
+++ b/src/app/pages/payments/payments.page.html
@@ -1,6 +1,9 @@
+<!-- Back button with a default href -->
 <ion-header>
-  <ion-toolbar>
-    <ion-title>payments</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button routerLink='/addlocation' defaultHref="home"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
