--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -72,15 +72,16 @@
                   [(ngModel)]="phoneNo"
                   inputPlaceholder="9505444749"
                   formControlName="phoneNumber"
+                  [onlyCountries]="countryIsoCodes"
                   modalCssClass="countryCode"
                    >
                 </ion-intl-tel-input>
               </ion-item>
 
               <div *ngIf="phoneNumber.invalid && phoneNumber.touched">
-                <ion-text color="danger" *ngIf="phoneNumber.errors.required">
+                <!-- <ion-text color="danger" *ngIf="phoneNumber.errors.required">
                   <p class="ion-no-margin"><sub>Phone is required.</sub></p>
-                </ion-text>
+                </ion-text> -->
                 <ion-text color="danger" *ngIf="phoneNumber.errors.phone">
                   <p class="ion-no-margin"><sub>Phone number is not valid.</sub></p>
                 </ion-text>
