--- a/src/app/components/image-picker/image-picker.component.html
+++ b/src/app/components/image-picker/image-picker.component.html
@@ -9,6 +9,6 @@
 
   <ion-button color="primary" (click)="onPickImage()" *ngIf="!selectedImage">
     <ion-icon name="camera" slot="start"></ion-icon>
-    <ion-label>Take Picture</ion-label>
+    <ion-label>Add</ion-label>
   </ion-button>
 </div>
