--- a/src/app/pages/addlocation/addlocation.page.html
+++ b/src/app/pages/addlocation/addlocation.page.html
@@ -22,7 +22,7 @@
     </ion-text>
   </div>
 
-  <!-- <ion-card class="ion-margin ion-padding-bottom">
+  <ion-card class="ion-margin ion-padding-bottom">
     <ion-card-header class="pb-0">
       <ion-card-title color="primary" class="ion-margin-bottom login-card"
         >Add Location</ion-card-title
@@ -126,39 +126,42 @@
 
       <ion-item lines="none">
         <ion-label position="stacked" color="secondary">Select Location<span class="text-danger">*</span></ion-label>
-        <ion-input class="form-control ion-margin-top" placeholder="  Enter Location" type="text" required>
+        <!-- <ion-input class="form-control ion-margin-top" placeholder="  Enter Location" type="text" required>
+        </ion-input> -->
+      </ion-item>
 
-        </ion-input>
+      <ion-item>
+        <app-location-picker></app-location-picker>
         <ion-icon name="location-outline" slot="end" item-end></ion-icon>
       </ion-item>
 
       <ion-item lines="none">
         <ion-label position="stacked" color="secondary">Identification Image<span class="text-danger">*</span></ion-label>
-        <ion-input class="mt-2 form-control-file" placeholder="  Enter Location" type="file" required>
-        </ion-input>
+        <!-- <ion-input class="mt-2 form-control-file" placeholder="  Enter Location" type="file" required>
+        </ion-input> -->
       </ion-item>
 
       <ion-item lines="none">
         <div class="Rectangle-72">
-          <ion-text>Image Here</ion-text>
+          <app-image-picker></app-image-picker>
         </div>
       </ion-item>
 
       <ion-item lines="none">
         <ion-label position="stacked" color="secondary">Location Images<span class="text-danger">*</span></ion-label>
-        <ion-input class="mt-2 form-control-file" placeholder="  Enter Location" type="file" required>
-        </ion-input>
+        <!-- <ion-input class="mt-2 form-control-file" placeholder="  Enter Location" type="file" required>
+        </ion-input> -->
       </ion-item>
 
       <ion-item lines="none" class="ion-margin-top">
         <span class="Rectangle-73">
-          <ion-text>Image</ion-text>
+          <app-image-picker></app-image-picker>
         </span>
         <span class="Rectangle-73">
-          <ion-text>Image</ion-text>
+          <app-image-picker></app-image-picker>
         </span>
         <span class="Rectangle-73">
-          <ion-text>Image</ion-text>
+          <app-image-picker></app-image-picker>
         </span>
       </ion-item>
 
@@ -178,10 +181,10 @@
     <div class="container text-center">
       <ion-button color="primary" (click)="addLocation()" routerLink="/payments">Add Location</ion-button>
     </div>
-  </ion-card> -->
+  </ion-card>
 
-  <app-location-picker></app-location-picker>
 
-  <app-image-picker></app-image-picker>
+
+
 
 </ion-content>
