--- a/src/global.scss
+++ b/src/global.scss
@@ -64,7 +64,10 @@
   width: 164px;
   height: 73px;
   flex-grow: 0;
-  padding: 27px 18px 29px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   border-radius: 4px;
   border: dashed 1px #003b6a;
   background-color: #fff;
@@ -84,8 +87,11 @@
   width: 95px;
   height: 57px;
   flex-grow: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   margin-right: 10px;
-  padding: 20px 20px;
   border-radius: 4px;
   border: dashed 1px #003b6a;
   background-color: #fff;
