--- a/src/app/pages/addlocation/addlocation.page.html
+++ b/src/app/pages/addlocation/addlocation.page.html
@@ -29,162 +29,265 @@
       >
     </ion-card-header>
 
-    <ion-list class="pt-0">
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Name</ion-label>
-        <ion-input class="form-control ion-margin-top ion-padding" placeholder="  Krishna" type="text" required></ion-input>
-      </ion-item>
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Mobile</ion-label>
-        <ion-input
-        class="form-control ion-margin-top"
-          placeholder=" Enter Mobile No"
-          type="text"
-          required
-        ></ion-input>
-      </ion-item>
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Email</ion-label>
-        <ion-input class="form-control ion-margin-top" placeholder="  Enter Email" type="text" required></ion-input>
-      </ion-item>
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Tag Existing House Name</ion-label>
-        <ion-input class="form-control ion-margin-top" placeholder="  Search for a house name" type="text" required></ion-input>
-      </ion-item>
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Add New House Name</ion-label>
-        <ion-input class="form-control ion-margin-top" placeholder="  Add new house name" type="text" required></ion-input>
-      </ion-item>
+    <form [formGroup]="addLocationForm">
+      <ion-list class="pt-0">
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary">Name</ion-label>
+          <ion-input
+            [(ngModel)]="userName"
+            [ngModelOptions]="{standalone: true}"
+            class="form-control ion-margin-top ion-padding"
+            type="text"
+            value="Naveen Vicky"
+            disabled
+          ></ion-input>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Country<span class="text-danger">*</span></ion-label>
-        <ion-select
-          [interfaceOptions]="customPopoverOptions"
-          interface="popover"
-          placeholder=" Select a Country"
-          class="border ion-margin-top"
-        >
-          <ion-select-option
-            *ngFor="let option of countries"
-            value="{{option}}"
-            >{{option}}</ion-select-option
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary">Mobile</ion-label>
+          <ion-input
+            [(ngModel)]="mobileNo"
+            [ngModelOptions]="{standalone: true}"
+            class="form-control ion-margin-top"
+            type="text"
+            value="9505444749"
+            disabled
+          ></ion-input>
+        </ion-item>
+
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary">Email</ion-label>
+          <ion-input
+            [ngModelOptions]="{standalone: true}"
+            [(ngModel)]="email"
+            class="form-control ion-margin-top"
+            type="text"
+            value="vicky@gmail.com"
+            disabled
+          ></ion-input>
+        </ion-item>
+
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Tag Existing / Add New House Name<span class="text-danger"
+              >*</span
+            ></ion-label
           >
-        </ion-select>
-      </ion-item>
-
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">State<span class="text-danger">*</span></ion-label>
-        <ion-select
-          [interfaceOptions]="customStatePopoverOptions"
-          interface="popover"
-          placeholder=" Select a State"
-          class="border ion-margin-top"
-        >
-          <ion-select-option
-            *ngFor="let option of states"
-            value="{{option}}"
-            >{{option}}</ion-select-option
+          <ion-select
+            interface="popover"
+            placeholder="Select a option"
+            class="border ion-margin-top"
           >
-        </ion-select>
-      </ion-item>
+            <ion-select-option value="tagExisting" (click)="val='tagExisting'"
+              >TagHouse</ion-select-option
+            >
+            <ion-select-option value="addNewHouse"
+              >AddNewHouse</ion-select-option
+            >
+          </ion-select>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">District<span class="text-danger">*</span></ion-label>
-        <ion-select
-          [interfaceOptions]="customDistrictPopoverOptions"
-          interface="popover"
-          placeholder="Select a District"
-          class="border ion-margin-top"
-        >
-          <ion-select-option
-            *ngFor="let option of districts"
-            value="{{option}}"
-            >{{option}}</ion-select-option
+        <ion-item lines="none" *ngIf="!(val === 'AddNewHouse')">
+          <ion-label position="stacked" color="secondary"
+            >Tag Existing House Name</ion-label
           >
-        </ion-select>
-      </ion-item>
+          <ion-input
+            class="form-control ion-margin-top"
+            placeholder="  Search for a house name"
+            type="text"
+            required
+          ></ion-input>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Village/City/Town Name<span class="text-danger">*</span></ion-label>
-        <ion-input class="form-control ion-margin-top" placeholder="  Enter details" type="text" required></ion-input>
-      </ion-item>
+        <ion-item lines="none" *ngIf="val === 'AddNewHouse'">
+          <ion-label position="stacked" color="secondary"
+            >Add New House Name</ion-label
+          >
+          <ion-input
+            [(ngModel)]="houseNameNew"
+            class="form-control ion-margin-top"
+            placeholder="  Add new house name"
+            type="text"
+            formControlName="houseNameNew"
+            required
+          ></ion-input>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Area<span class="text-danger">*</span></ion-label>
-        <ion-input class="form-control ion-margin-top" placeholder="  Enter Area" type="text" required></ion-input>
-      </ion-item>
+        <ion-item lines="none" *ngIf="!(val === 'AddNewHouse')">
+          <ion-label position="stacked" color="secondary"
+            >Country<span class="text-danger">*</span></ion-label
+          >
+          <ion-select
+            [interfaceOptions]="customPopoverOptions"
+            interface="popover"
+            placeholder=" Select a Country"
+            class="border ion-margin-top"
+          >
+            <ion-select-option
+              *ngFor="let option of countries"
+              value="{{option}}"
+              >{{option}}</ion-select-option
+            >
+          </ion-select>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Door No/Plot No<span class="text-danger">*</span></ion-label>
-        <ion-input class="form-control ion-margin-top" placeholder="  Enter Details" type="text" required></ion-input>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >State<span class="text-danger">*</span></ion-label
+          >
+          <ion-select
+            [interfaceOptions]="customStatePopoverOptions"
+            interface="popover"
+            placeholder=" Select a State"
+            class="border ion-margin-top"
+          >
+            <ion-select-option *ngFor="let option of states" value="{{option}}"
+              >{{option}}</ion-select-option
+            >
+          </ion-select>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Apartment</ion-label>
-        <ion-input class="form-control ion-margin-top" placeholder="  Apartment name & Flat no" type="text" required></ion-input>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >District<span class="text-danger">*</span></ion-label
+          >
+          <ion-select
+            [interfaceOptions]="customDistrictPopoverOptions"
+            interface="popover"
+            placeholder="Select a District"
+            class="border ion-margin-top"
+          >
+            <ion-select-option
+              *ngFor="let option of districts"
+              value="{{option}}"
+              >{{option}}</ion-select-option
+            >
+          </ion-select>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Select Location<span class="text-danger">*</span></ion-label>
-        <!-- <ion-input class="form-control ion-margin-top" placeholder="  Enter Location" type="text" required>
-        </ion-input> -->
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Village/City/Town Name<span class="text-danger">*</span></ion-label
+          >
+          <ion-input
+            [(ngModel)]="village"
+            class="form-control ion-margin-top"
+            placeholder="  Enter details"
+            type="text"
+            formControlName="village"
+          ></ion-input>
+        </ion-item>
 
-      <ion-item>
-        <app-location-picker></app-location-picker>
-        <ion-icon name="location-outline" slot="end" item-end></ion-icon>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Area<span class="text-danger">*</span></ion-label
+          >
+          <ion-input
+            [(ngModel)]="area"
+            class="form-control ion-margin-top"
+            placeholder="  Enter Area"
+            type="text"
+            formControlName="area"
+            required
+          ></ion-input>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Identification Image<span class="text-danger">*</span></ion-label>
-        <!-- <ion-input class="mt-2 form-control-file" placeholder="  Enter Location" type="file" required>
-        </ion-input> -->
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Door No/Plot No<span class="text-danger">*</span></ion-label
+          >
+          <ion-input
+            class="form-control ion-margin-top"
+            placeholder="  Enter Details"
+            type="text"
+            required
+          ></ion-input>
+        </ion-item>
 
-      <ion-item lines="none">
-        <div class="Rectangle-72">
-          <app-image-picker></app-image-picker>
-        </div>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary">Apartment</ion-label>
+          <ion-input
+            class="form-control ion-margin-top"
+            placeholder="  Apartment name & Flat no"
+            type="text"
+            required
+          ></ion-input>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Location Images<span class="text-danger">*</span></ion-label>
-        <!-- <ion-input class="mt-2 form-control-file" placeholder="  Enter Location" type="file" required>
-        </ion-input> -->
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Select Location<span class="text-danger">*</span></ion-label
+          >
+          <!-- <ion-input class="form-control ion-margin-top" placeholder="  Enter Location" type="text" required>
+          </ion-input> -->
+        </ion-item>
 
-      <ion-item lines="none" class="ion-margin-top">
-        <span class="Rectangle-73">
-          <app-image-picker></app-image-picker>
-        </span>
-        <span class="Rectangle-73">
-          <app-image-picker></app-image-picker>
-        </span>
-        <span class="Rectangle-73">
-          <app-image-picker></app-image-picker>
-        </span>
-      </ion-item>
+        <ion-item>
+          <app-location-picker></app-location-picker>
+          <ion-icon name="location-outline" slot="end" item-end></ion-icon>
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-button size="small" color="primary" slot="end">Add More</ion-button>
-      </ion-item>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Identification Image<span class="text-danger">*</span></ion-label
+          >
+          <!-- <ion-input class="mt-2 form-control-file" placeholder="  Enter Location" type="file" required>
+          </ion-input> -->
+        </ion-item>
 
-      <ion-item lines="none">
-        <ion-label position="stacked" color="secondary">Upload Voice Direction<span class="text-danger">*</span></ion-label>
-        <ion-input class="form-control ion-margin-top" placeholder="  File Chosen" type="text" required>
+        <ion-item lines="none">
+          <div class="Rectangle-72">
+            <app-image-picker></app-image-picker>
+          </div>
+        </ion-item>
 
-        </ion-input>
-        <ion-icon name="mic-outline" slot="end" item-end></ion-icon>
-      </ion-item>
-    </ion-list>
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Location Images<span class="text-danger">*</span></ion-label
+          >
+          <!-- <ion-input class="mt-2 form-control-file" placeholder="  Enter Location" type="file" required>
+          </ion-input> -->
+        </ion-item>
 
+        <ion-item lines="none" class="ion-margin-top">
+          <span class="Rectangle-73">
+            <app-image-picker></app-image-picker>
+          </span>
+          <span class="Rectangle-73">
+            <app-image-picker></app-image-picker>
+          </span>
+          <span class="Rectangle-73">
+            <app-image-picker></app-image-picker>
+          </span>
+        </ion-item>
+
+        <ion-item lines="none">
+          <ion-button size="small" color="primary" slot="end"
+            >Add More</ion-button
+          >
+        </ion-item>
+
+        <ion-item lines="none">
+          <ion-label position="stacked" color="secondary"
+            >Upload Voice Direction<span class="text-danger">*</span></ion-label
+          >
+          <ion-input
+            class="form-control ion-margin-top"
+            placeholder="  File Chosen"
+            type="text"
+            required
+          >
+          </ion-input>
+          <ion-icon name="mic-outline" slot="end" item-end></ion-icon>
+        </ion-item>
+      </ion-list>
+    </form>
+
+    <!-- [disabled]="!addLocationForm.valid" -->
     <div class="container text-center">
-      <ion-button color="primary" (click)="addLocation()" routerLink="/payments">Add Location</ion-button>
+      <ion-button color="primary" (click)="addLocation()" routerLink="/payments"
+        >Add Location</ion-button
+      >
     </div>
   </ion-card>
-
-
-
-
-
 </ion-content>
