reduced redundant code using header text and logo component

--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -17,19 +17,8 @@
 <ion-content>
   <div>
     <div class="login-main">
-      <div class="container pt-3 pb-3">
-        <div class="logo">
-          <img
-            src="assets/images/logo.png"
-            class="ion-margin-top"
-            alt="myhomeLogo"
-          />
-        </div>
+      <app-header-text-logo></app-header-text-logo>
 
-        <ion-text class="ion-text-center" color="primary">
-          <h2 class="app-name mt-1">House Name</h2>
-        </ion-text>
-      </div>
 
       <ion-card class="ion-margin">
         <ion-card-header class="ion-no-margin">
