--- a/src/app/pages/editlocation/editlocation.page.html
+++ b/src/app/pages/editlocation/editlocation.page.html
@@ -8,19 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <div class="container pt-3 pb-2">
-    <div class="logo">
-      <img
-        src="assets/images/logo.png"
-        class="ion-margin-top"
-        alt="myhomeLogo"
-      />
-    </div>
-
-    <ion-text class="ion-text-center" color="primary">
-      <h2 class="app-name mt-1">House Name</h2>
-    </ion-text>
-  </div>
+  <app-header-text-logo></app-header-text-logo>
 
   <ion-card class="ion-margin ion-padding-bottom">
     <ion-card-header class="pb-0">
