--- a/src/app/pages/postevent/postevent.page.html
+++ b/src/app/pages/postevent/postevent.page.html
@@ -76,24 +76,17 @@
         <ion-label position="stacked" color="secondary"
           >Event Images<span class="text-danger">*</span></ion-label
         >
-        <ion-input
-          class="mt-2 form-control-file"
-          placeholder="  Enter Location"
-          type="file"
-          required
-        >
-        </ion-input>
       </ion-item>
 
-      <ion-item lines="none">
+      <ion-item lines="none" class="ion-margin-top">
         <span class="Rectangle-73">
-          <ion-text>Image</ion-text>
+          <app-image-picker></app-image-picker>
         </span>
         <span class="Rectangle-73">
-          <ion-text>Image</ion-text>
+          <app-image-picker></app-image-picker>
         </span>
         <span class="Rectangle-73">
-          <ion-text>Image</ion-text>
+          <app-image-picker></app-image-picker>
         </span>
       </ion-item>
 
