Ui bug fixes in addlocation, post event pages

--- a/src/app/pages/postevent/postevent.page.html
+++ b/src/app/pages/postevent/postevent.page.html
@@ -79,15 +79,17 @@
       </ion-item>
 
       <ion-item lines="none" class="ion-margin-top">
-        <span class="Rectangle-73">
-          <app-image-picker></app-image-picker>
-        </span>
-        <span class="Rectangle-73">
-          <app-image-picker></app-image-picker>
-        </span>
-        <span class="Rectangle-73">
-          <app-image-picker></app-image-picker>
-        </span>
+        <div class="d-flex justify-content-center w-100">
+          <span class="Rectangle-73">
+            <app-image-picker></app-image-picker>
+          </span>
+          <span class="Rectangle-73">
+            <app-image-picker></app-image-picker>
+          </span>
+          <span class="Rectangle-73">
+            <app-image-picker></app-image-picker>
+          </span>
+        </div>
       </ion-item>
 
       <ion-item lines="none">
