--- a/src/app/pages/addlocation/addlocation.page.html
+++ b/src/app/pages/addlocation/addlocation.page.html
@@ -8,7 +8,6 @@
 </ion-header>
 
 <ion-content>
-
   <app-header-text-logo></app-header-text-logo>
 
   <ion-card class="ion-margin ion-padding-bottom">
@@ -211,7 +210,7 @@
           </ion-input> -->
         </ion-item>
 
-        <ion-item>
+        <ion-item lines="none">
           <app-location-picker></app-location-picker>
           <ion-icon name="location-outline" slot="end" item-end></ion-icon>
         </ion-item>
@@ -224,7 +223,7 @@
           </ion-input> -->
         </ion-item>
 
-        <ion-item lines="none">
+        <ion-item lines="none" class="py-1">
           <div class="Rectangle-72">
             <app-image-picker></app-image-picker>
           </div>
@@ -237,15 +236,17 @@
         </ion-item>
 
         <ion-item lines="none" class="ion-margin-top">
-          <span class="Rectangle-73">
-            <app-image-picker></app-image-picker>
-          </span>
-          <span class="Rectangle-73">
-            <app-image-picker></app-image-picker>
-          </span>
-          <span class="Rectangle-73">
-            <app-image-picker></app-image-picker>
-          </span>
+          <div class="location-images-container">
+            <span class="Rectangle-73">
+              <app-image-picker></app-image-picker>
+            </span>
+            <span class="Rectangle-73">
+              <app-image-picker></app-image-picker>
+            </span>
+            <span class="Rectangle-73">
+              <app-image-picker></app-image-picker>
+            </span>
+          </div>
         </ion-item>
 
         <ion-item lines="none">
@@ -258,23 +259,31 @@
           <ion-label position="stacked" color="secondary"
             >Upload Voice Direction<span class="text-danger">*</span></ion-label
           >
+
           <ion-input
             class="form-control ion-margin-top"
             placeholder="  File Chosen"
             type="text"
             required
           >
+
           </ion-input>
-          <ion-icon name="mic-outline" slot="end" item-end></ion-icon>
+          <ion-icon name="mic-outline" slot="end"></ion-icon>
+
         </ion-item>
+
       </ion-list>
     </form>
-
-    <!-- [disabled]="!addLocationForm.valid" -->
-    <div class="container text-center">
-      <ion-button color="primary" (click)="addLocation()" routerLink="/payments"
-        >Add Location</ion-button
-      >
-    </div>
   </ion-card>
+
+  <div class="container text-center mt-4">
+    <ion-button
+      color="primary"
+      [disabled]="!addLocationForm.valid"
+      (click)="addLocation()"
+      routerLink="/payments"
+      >Add Location</ion-button
+    >
+  </div>
+
 </ion-content>
