Toolbar converted to component and reused

--- a/src/app/pages/payments/payments.page.html
+++ b/src/app/pages/payments/payments.page.html
@@ -1,11 +1,4 @@
-<!-- Back button with a default href -->
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-back-button routerLink='/addlocation' defaultHref="home"></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+<app-toolbar-top></app-toolbar-top>
 
 <ion-content>
   <div class="container text-center payment-cont d-flex align-items-center">
