--- a/src/app/pages/support/support.page.html
+++ b/src/app/pages/support/support.page.html
@@ -1,12 +1,4 @@
-<!-- Back button with a default href -->
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="home"></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
+<app-toolbar-top></app-toolbar-top>
 <ion-content>
   <app-header-text-logo></app-header-text-logo>
 
