back button icon changed

--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -3,10 +3,12 @@
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-back-button
+        icon="chevron-back-outline"
         *ngIf="currentFragment==='mobile'"
         defaultHref="home"
       ></ion-back-button>
       <ion-button
+        icon="chevron-back-outline"
         *ngIf="currentFragment==='otp'"
         (click)="currentFragment='mobile'"
         >Back</ion-button
