--- a/src/app/components/toolbar-top/toolbar-top.component.html
+++ b/src/app/components/toolbar-top/toolbar-top.component.html
@@ -2,8 +2,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="home"></ion-back-button>
-      <ion-text>Check</ion-text>
+      <ion-back-button icon="chevron-back-outline" defaultHref="home"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
