--- a/src/app/components/location-picker/location-picker.component.html
+++ b/src/app/components/location-picker/location-picker.component.html
@@ -1,6 +1,7 @@
 <div>
   <ion-button color="primary" (click)="onPickLocation()">
     <ion-icon name="map" slot="start"></ion-icon>
-    <ion-label>Select Location</ion-label>
-  </ion-button>
+    <ion-label>Pick a Location on Map</ion-label>
+  </ion-button><br>
+  <ion-text *ngIf="locationPicked">{{formattedAdress}}</ion-text>
 </div>
